# internal/pkg/models/Movie.go
@@ -45,6 +45,11 @@ type MovieList struct {
 	PathToSliderAvatar string
 }
 
+type Recommendation struct {
+	RatingMovieName string
+	Movie *[]MovieList
+}
+
 type Genre struct {
 	ID   uint64
 	Name string
@@ -60,11 +65,27 @@ func (t *GenreList) Scan(src interface{}) error {
 	return ErrFooCastErr
 }
 
+func (t *GenreList) Join(cp string) string{
+	result := ""
+	for _, val := range *t{
+		result += val.Name + cp
+	}
+	return result
+}
+
 func (t *ActorList) Scan(src interface{}) error {
 	if val, ok := src.([]byte); ok {
 		return json.Unmarshal(val, t)
 	}
 	return ErrFooCastErr
+}
+
+func (t *ActorList) Join(cp string) string{
+	result := ""
+	for _, val := range *t{
+		result += val.Name + val.Surname + cp
+	}
+	return result
 }
 
 type RatingSet struct {
@@ -89,4 +110,11 @@ type SearchMovie struct {
 type RateMovie struct {
 	ID     uint64 `json:"id"`
 	Rating int64  `json:"rating"`
+}
+
+type RatingModel struct {
+	ID uint64
+	UserID uint64
+	MovieID uint64
+	MovieRating int64
 }
